--- a/styles/main.css
+++ b/styles/main.css
@@ -192,7 +192,7 @@ table {
 
 th, td {
     padding: 1rem;
-    text-align: left;
+    text-align: center;
     border-bottom: 1px solid var(--border);
 }
 
